--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
